# daml-tools

./: .actrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  AST_DEVX_AUDIT_PLAN.md  CONTRIBUTING.md  Cargo.toml  README.md  RUST_MAINTAINABILITY_CHECKLIST.md  deny.toml  mise.toml  prek.toml  release-plz.toml
crates/daml-fmt/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json
crates/daml-fmt/corpus/: SCOREBOARD.md  desugar-fail.txt  desugar-ok.txt  excluded-error-annotated.txt
crates/daml-fmt/docs/: audit-workflow.md  corpus-followups.md
crates/daml-fmt/npm/cli/: README.md  package.json
crates/daml-fmt/npm/darwin-arm64/: package.json
crates/daml-fmt/npm/linux-arm64/: package.json
crates/daml-fmt/npm/linux-x64/: package.json
crates/daml-fmt/npm/win32-x64/: package.json
crates/daml-fmt/src/: config.rs  format_rules.rs  layout_ast.rs  lib.rs
crates/daml-fmt/test/: diff.js
crates/daml-fmt/tests/: cli.rs  corpus_span_oracle.rs  coverage.rs  layout_fixtures.rs  library_behavior.rs
crates/daml-fmt/tests/golden/: cli_check_unformatted_stdout.txt  cli_help_stderr.txt  cli_stdin_parser_stderr.txt  cli_unknown_option_stderr.txt  cli_unknown_rule_stderr.txt  cli_write_parser_stderr.txt
crates/daml-fmt/tools/: audit-samples.js  gen-expected.sh  verify-gap-cases.sh  verify-rust.sh
crates/daml-lint/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
crates/daml-lint/docs/: accuracy-roadmap.md  corpus-followups.md  raw-field-removal-plan.md  typed-type-ast.md
crates/daml-lint/examples/: choice-param-shadows-field.js  choice-param-shadows-field.ts  consuming-choice-signatory-controller.js  consuming-choice-signatory-controller.ts  daml-lint.d.ts  function-ledger-actions.js  function-ledger-actions.ts  no-bare-contractid-field.js  no-bare-contractid-field.ts  no-create-in-nonconsuming.js  no-create-in-nonconsuming.ts  no-trace.js  no-trace.ts  template-requires-ensure.js  template-requires-ensure.ts  unguarded-division-ast.js  unguarded-division-ast.ts  unqualified-da-import.js  unqualified-da-import.ts
crates/daml-lint/lint-plugin/: README.md  package.json  tsconfig.json
crates/daml-lint/lint-plugin/type-tests/: no-visitor-rule.ts  type-node-lit.ts
crates/daml-lint/npm/cli/: README.md  package.json
crates/daml-lint/npm/darwin-arm64/: package.json
crates/daml-lint/npm/linux-arm64/: package.json
crates/daml-lint/npm/linux-x64/: package.json
crates/daml-lint/npm/win32-x64/: package.json
crates/daml-lint/rule-authoring/: README.md  package.json  tsconfig.json
crates/daml-lint/rule-authoring/templates/: minimal-rule.ts
crates/daml-lint/rules/: _helpers.ts  archive-before-execute.js  archive-before-execute.ts  head-of-list-query.js  head-of-list-query.ts  missing-ensure-decimal.js  missing-ensure-decimal.ts  missing-positive-amount.js  missing-positive-amount.ts  unbounded-fields.js  unbounded-fields.ts  unguarded-division.js  unguarded-division.ts
crates/daml-lint/src/: adversarial_tests.rs  config.rs  corpus_tests.rs  detector.rs  ir.rs  lib.rs  main.rs  parser.rs  reporter.rs  rule_registry.rs
crates/daml-lint/src/detectors/: archive_before_execute.rs  builtin_script_tests.rs  ensure_decimal.rs  head_of_list.rs  mod.rs  positive_amount.rs  script.rs  unbounded_fields.rs  unguarded_division.rs
crates/daml-lint/test-fixtures/: bad_patterns.daml  good_patterns.daml
crates/daml-lint/tests/: adversarial_behavior.rs  api_evolution.rs  builtin_rule_behavior.rs  cli.rs  cli_golden.rs  corpus_integration.rs  custom_rule_runtime_contracts.rs  detector_contracts.rs  fixture_detectors.rs  parser_ir_contracts.rs  reporter_contracts.rs
crates/daml-lint/tests/common/: mod.rs
crates/daml-lint/tests/compile_fail/: configured_detector_new_private.rs  configured_detector_new_private.stderr  coordinate_space_mixing.rs  coordinate_space_mixing.stderr  non_exhaustive_finding.rs  non_exhaustive_finding.stderr
crates/daml-lint/tests/compile_pass/: finding_field_reads.rs
crates/daml-lint/tests/fixtures/: bad_patterns.daml
crates/daml-lint/tests/golden/: builtin_archive-before-execute_archive_before_try_within_one_arm_is_flagged.txt  builtin_archive-before-execute_archive_helper_called_before_try_flags_at_call_site.txt  builtin_archive-before-execute_choice_finding_reports_real_line.txt  builtin_archive-before-execute_exercise_archive_before_try_is_flagged.txt  builtin_archive-before-execute_fetchandarchive_before_try_triggers.txt  builtin_archive-before-execute_multiline_archive_before_try_is_flagged.txt  builtin_archive-before-execute_multiple_archives_each_reported.txt  builtin_archive-before-execute_multiple_multiline_archives_each_reported.txt  builtin_head-of-list-query_alias_chain_of_query_result_flags.txt  builtin_head-of-list-query_cons_head_bind_from_query_flags.txt  builtin_head-of-list-query_cons_pattern_on_query_result_flags.txt  builtin_head-of-list-query_cons_pattern_reported_once.txt  (+52 more)
crates/daml-lint/tools/: check-lint-plugin-version.mjs  check-rules.mjs  smoke-lint-plugin-scaffold.mjs  sync-lint-plugin-types.mjs  sync-lint-plugin-version.mjs  sync-rule-authoring-types.mjs
crates/daml-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/daml-parser/src/: ast.rs  ast_span.rs  data_tests.rs  declaration_tests.rs  diag_tests.rs  expression_behavior_tests.rs  layout.rs  lexer.rs  lib.rs  parse.rs  projection_tests.rs  span_tests.rs
crates/daml-parser/tests/: ast_render.rs  declared_fixity_grouping.rs  diagnostic_goldens.rs  diagnostics_recovery.rs  malformed_recovery.rs  module_parse_behavior.rs  package_qualified_imports.rs  parser_non_goals_guardrail.rs  projection_precedence.rs  record_pattern_fields.rs  span_losslessness.rs  strict_parse_contract.rs  syntax_change_counterexamples.rs  type_wiring.rs
crates/daml-syntax/: CHANGELOG.md  Cargo.toml  README.md
crates/daml-syntax/src/: coordinate.rs  lib.rs
crates/daml-syntax/tests/: compile_fail.rs  coordinate_contracts.rs  corpus_source_surface.rs  finance_corpus_surface.rs  source_api.rs  source_surface_expectations.rs
(+962 files in other folders)
