[workspace]
resolver = "2"
members = [
    "crates/daml-parser",
    "crates/daml-syntax",
    "crates/daml-lint",
    "crates/daml-fmt",
]

# Shared metadata. Each crate keeps its own name/version/description/keywords so
# they can be released and SemVer'd independently (parser stays boring; tools
# bump faster), but the boilerplate below is written once here.
[workspace.package]
edition = "2021"
# Workspace MSRV (also enforced by `.github/workflows/ci.yml` `msrv` job on
# 1.87.0). Lower bound from optional deps on `daml-lint`: `rquickjs` 0.12
# declares `rust-version = "1.87"`; `clap` 4.6 declares `1.85`. Parser and
# formatter crates alone are lighter, but one workspace MSRV keeps CI and
# `cargo install` predictable.
rust-version = "1.87.0"
license = "AGPL-3.0-only"
repository = "https://github.com/stevennevins/daml-tools"
homepage = "https://github.com/stevennevins/daml-tools"
authors = ["Steven Nevins"]

[workspace.dependencies]
# Inter-crate dep declared once; crates opt in with `daml-parser.workspace = true`.
# Carries BOTH path (for local builds) and version (for crates.io publish).
daml-parser = { path = "crates/daml-parser", version = "0.6.2" }
daml-syntax = { path = "crates/daml-syntax", version = "0.4.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rquickjs = "0.12.0"
text-size = "1"

# The lint contract lives here (not just in CI) so the same denies fire on a dev
# laptop. Each crate opts in with `[lints] workspace = true`. `priority = -1`
# lets broad groups yield to the specific lint levels below them.
[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
branches_sharing_code = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
doc_markdown = "deny"
format_push_string = "deny"
iter_with_drain = "deny"
items_after_statements = "deny"
match_same_arms = "deny"
missing_const_for_fn = "deny"
needless_pass_by_value = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
ref_option = "deny"
todo = "deny"
too_long_first_doc_paragraph = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnested_or_patterns = "deny"
useless_let_if_seq = "deny"
use_self = "deny"
unwrap_used = "deny"
