[workspace]
resolver = "2"
members = [
    "crates/daml-parser",
    "crates/daml-syntax",
    "crates/daml-lint",
    "crates/daml-fmt",
]

# Shared metadata. Each crate keeps its own name/version/description/keywords so
# they can be released and SemVer'd independently (parser stays boring; tools
# bump faster), but the boilerplate below is written once here.
[workspace.package]
edition = "2021"
# Workspace MSRV (also enforced by `.github/workflows/ci.yml` `msrv` job on
# 1.87.0). Lower bound from optional deps on `daml-lint`: `rquickjs` 0.12
# declares `rust-version = "1.87"`; `clap` 4.6 declares `1.85`. Parser and
# formatter crates alone are lighter, but one workspace MSRV keeps CI and
# `cargo install` predictable.
rust-version = "1.87.0"
license = "AGPL-3.0-only"
repository = "https://github.com/stevennevins/daml-tools"
homepage = "https://github.com/stevennevins/daml-tools"
authors = ["Steven Nevins"]

[workspace.dependencies]
# Inter-crate dep declared once; crates opt in with `daml-parser.workspace = true`.
# Carries BOTH path (for local builds) and version (for crates.io publish).
daml-parser = { path = "crates/daml-parser", version = "0.9.1" }
daml-syntax = { path = "crates/daml-syntax", version = "0.8.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rquickjs = "0.12.0"
text-size = "1"

# The lint contract lives here (not just in CI) so the same denies fire on a dev
# laptop. Each crate opts in with `[lints] workspace = true`. `priority = -1`
# lets broad groups yield to the specific lint levels below them.
[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
branches_sharing_code = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
clear_with_drain = "deny"
collection_is_never_read = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
doc_markdown = "deny"
enum_glob_use = "deny"
fallible_impl_from = "deny"
fn_params_excessive_bools = "deny"
format_push_string = "deny"
ignored_unit_patterns = "deny"
iter_not_returning_iterator = "deny"
iter_with_drain = "deny"
iter_without_into_iter = "warn"
items_after_statements = "deny"
literal_string_with_formatting_args = "deny"
manual_let_else = "warn"
match_bool = "deny"
match_same_arms = "deny"
match_wildcard_for_single_variants = "warn"
missing_const_for_fn = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "warn"
missing_panics_doc = "deny"
must_use_candidate = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
path_buf_push_overwrite = "deny"
pub_underscore_fields = "deny"
ref_option = "deny"
return_self_not_must_use = "deny"
redundant_clone = "deny"
search_is_some = "deny"
struct_excessive_bools = "deny"
todo = "deny"
too_long_first_doc_paragraph = "deny"
trait_duplication_in_bounds = "deny"
type_repetition_in_bounds = "deny"
unimplemented = "deny"
unused_peekable = "deny"
uninlined_format_args = "deny"
unnested_or_patterns = "deny"
useless_let_if_seq = "deny"
use_self = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"
