[package]
name = "daml-fmt"
version = "0.7.1"
description = "A canonical code formatter for the Daml smart-contract language, built on daml-parser"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/daml-fmt"
readme = "README.md"
keywords = ["daml", "formatter", "fmt", "code-formatter", "smart-contracts"]
categories = ["development-tools", "command-line-utilities"]
# Differential-test data and dev-only scripts stay out of the published crate.
# Feature-gated dev-tool bin sources stay packaged because Cargo compiles bin
# targets from `src/bin`, but they are not installed unless `dev-tools` is on.
exclude = [
    "original/",
    "expected/",
    "corpus/",
    "test/",
    "tools/",
    "docs/",
    "CLAUDE.md",
    "package.json",
]

# npm distribution of the CLI (cargo-npm). `cargo npm generate` builds a thin
# wrapper package plus one optional native package per target.
[package.metadata.npm]
name = "@daml-tools/daml-fmt"
prefix = "@daml-tools/daml-fmt-"
bins = ["daml-fmt"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
custom = { engines = { node = ">=18" }, publishConfig = { access = "public" } }

[lints]
workspace = true

[dependencies]
# daml-fmt depends on parser/syntax only. It must never pull in daml-lint.
daml-parser.workspace = true
daml-syntax.workspace = true

[features]
# The corpus-harness bins below are dev tools (they read the unpublished
# `original/` corpus). Gating them behind this off-by-default feature keeps
# `cargo install daml-fmt` to the single public `daml-fmt` binary, while devs
# can still run them with explicit corpus paths.
dev-tools = []

[lib]
name = "daml_fmt"
path = "src/lib.rs"

# The one published CLI.
[[bin]]
name = "daml-fmt"
path = "src/bin/daml-fmt.rs"

# Dev-only corpus harnesses — not installed by `cargo install daml-fmt`.
[[bin]]
name = "lossless-check"
path = "src/bin/lossless-check.rs"
required-features = ["dev-tools"]

[[bin]]
name = "ast-check"
path = "src/bin/ast-check.rs"
required-features = ["dev-tools"]

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"
required-features = ["dev-tools"]

[[test]]
name = "coverage"
path = "tests/coverage.rs"
required-features = ["dev-tools"]
