[package]
name = "daml-lint"
version = "0.3.7"
description = "Static analysis scanner for Daml smart contracts"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["daml", "linter", "static-analysis", "smart-contracts", "security"]
categories = ["development-tools", "command-line-utilities"]
# Dev-only fixtures/notes stay out of the published crate (the custom-rule
# `examples/` are kept — users writing AST rules need them).
exclude = ["test-fixtures/", "docs/"]

[lints]
workspace = true

[dependencies]
daml-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
# clap (CLI) and rquickjs (custom-rule JS engine) are optional so a library
# consumer with `default-features = false` gets parser lowering and rule-facing
# IR WITHOUT pulling a CLI arg parser or a JS runtime. The published binary
# turns both on via the default features below.
clap = { workspace = true, optional = true }
rquickjs = { workspace = true, optional = true }

[features]
default = ["cli", "js-runtime", "custom-rules"]
# `cli`: the clap-based `daml-lint` binary.
cli = ["dep:clap"]
# `js-runtime`: enable the QuickJS-backed rule runtime used by shipped built-ins.
js-runtime = ["dep:rquickjs"]
# `custom-rules`: enable loading user-provided JavaScript AST rule files.
custom-rules = []

# The CLI binary needs the clap CLI and the JS runtime for built-ins. The
# `custom-rules` feature adds `--rules`. With `default-features = false` the bin
# is skipped and you get the dependency-light library. The lib target is still
# auto-detected.
[[bin]]
name = "daml-lint"
path = "src/main.rs"
required-features = ["cli", "js-runtime"]
