[package]
name = "daml-lint"
version = "0.7.0"
description = "Static analysis scanner for Daml smart contracts"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/daml-lint"
readme = "README.md"
keywords = ["daml", "linter", "static-analysis", "smart-contracts", "security"]
categories = ["development-tools", "command-line-utilities"]
# Dev-only fixtures/notes stay out of the published crate. Keep `examples/` and
# compiled `rules/*.js` (embedded at build time via `include_str!`); exclude
# TypeScript rule sources, lint-plugin npm metadata, and release sync scripts.
exclude = [
    "test-fixtures/",
    "docs/",
    "tools/",
    "lint-plugin/",
    "package.json",
    "package-lock.json",
    "tsconfig.json",
    "rules/*.ts",
]

# npm distribution of the CLI (cargo-npm). `cargo npm generate` builds a thin
# wrapper package plus one optional native package per target.
[package.metadata.npm]
name = "@daml-tools/daml-lint"
prefix = "@daml-tools/daml-lint-"
bins = ["daml-lint"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
custom = { engines = { node = ">=18" }, publishConfig = { access = "public" } }

[lints]
workspace = true

[dependencies]
daml-parser.workspace = true
daml-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
# clap (CLI) and rquickjs (custom-rule JS engine) are optional so a library
# consumer with `default-features = false` gets parser lowering and rule-facing
# IR WITHOUT pulling a CLI arg parser or a JS runtime. The published binary
# turns both on via the default features below.
clap = { workspace = true, optional = true }
rquickjs = { workspace = true, optional = true }

[features]
default = ["cli", "js-runtime", "custom-rules"]
# `cli`: the clap-based `daml-lint` binary.
cli = ["dep:clap", "js-runtime"]
# `js-runtime`: enable the QuickJS-backed rule runtime used by shipped built-ins.
js-runtime = ["dep:rquickjs"]
# `custom-rules`: enable loading user-provided JavaScript AST rule files.
custom-rules = ["js-runtime"]

# The CLI binary needs the clap CLI and the JS runtime for built-ins. The
# `custom-rules` feature adds `--rules`. With `default-features = false` the bin
# is skipped and you get the dependency-light library. The lib target is still
# auto-detected.
[[bin]]
name = "daml-lint"
path = "src/main.rs"
required-features = ["cli", "js-runtime"]
