[package]
name = "daml-syntax"
version = "0.6.0"
description = "Shared parsed-source surface for Daml tools"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/daml-syntax"
readme = "README.md"
keywords = ["daml", "syntax", "parser", "diagnostics", "source-map"]
categories = ["parser-implementations", "development-tools"]

[lints]
workspace = true

[dependencies]
daml-parser.workspace = true
text-size.workspace = true
